--- a/frontend/src/components/SongPage/Header.css
+++ b/frontend/src/components/SongPage/Header.css
@@ -70,9 +70,11 @@
   align-items: flex-start;
 }
 .song_header__song h2 {
+  max-width: 620px;
   margin: 0;
   padding: 6px;
   
+  word-wrap: break-word;
   text-align: left;
   
   background-color: #212121;
